--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-
-
 body {
 	font-family: 'Calibri', sans-serif;
 	padding-top: 100px;
@@ -20,7 +18,7 @@ body {
 
 .header {
 	box-shadow: 0px 4px 26px 0px hsla(0, 0%, 0%, 0.09);
-	height: 100px;
+	padding: 15px 0;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -65,7 +63,8 @@ body {
 }
 
 .search-form__btn {
-	background: url(../images/search.svg) no-repeat;
+	background: url(http://cx75857.tw1.ru/wp-content/uploads/2024/05/search.svg)
+		no-repeat;
 	height: 20px;
 	width: 20px;
 	background-color: transparent;
@@ -134,6 +133,10 @@ body {
 	height: 90%;
 }
 
+.nav__list .nav__menu:nth-child(3) li:first-child {
+	opacity: 0;
+}
+
 .nav__menu:first-child {
 	position: relative;
 	display: flex;
@@ -161,6 +164,7 @@ body {
 .nav__menu:not(.nav__menu:first-child) li {
 	font-size: 24px;
 	margin-bottom: 50px;
+	width: 100%;
 }
 
 li.nav__menu--title {
@@ -259,7 +263,7 @@ li.nav__menu--title {
 	content: '';
 	display: block;
 	text-align: center;
-	background: url(../images/download.svg);
+	background: url(http://cx75857.tw1.ru/wp-content/uploads/2024/05/download.svg);
 	width: 32px;
 	height: 32px;
 	cursor: pointer;
@@ -447,6 +451,15 @@ a:hover {
 	.container {
 		max-width: 1210px;
 	}
+	.nav__list {
+		padding: 30px;
+		gap: 30px;
+	}
+
+	.nav__menu:not(.nav__menu:first-child) li,
+	.nav__menu:first-child {
+		font-size: 20px;
+	}
 
 	.about__img {
 		width: 55%;
@@ -476,7 +489,7 @@ a:hover {
 	}
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1270px) {
 	.container {
 		max-width: 900px;
 	}
@@ -745,7 +758,7 @@ a:hover {
 		transition: 100ms ease-in;
 	}
 	.nav {
-		top: 65px;
+		top: 53px;
 	}
 }
 
